# cpp-design-patterns

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
design-patterns/: CMakeLists.txt  design-patterns.md
design-patterns/abstract-factory/: abstract-factory.md
design-patterns/abstract-factory/src/: main.cpp
design-patterns/abstract-factory/src/product_abstract_factory/: CMakeLists.txt  ConcreteFactory2.h  IAbstractFactory.h  IProductA.h
design-patterns/adapter/src/: main.cpp
design-patterns/adapter/src/class_adapter/: CMakeLists.txt
design-patterns/adapter/src/common/: ITarget.h
design-patterns/bridge/: bridge.md
design-patterns/bridge/src/full_bridge/: CMakeLists.txt
design-patterns/bridge/src/pimpl_idiom/: PimplIdiomExample.cpp
design-patterns/builder/: builder.md
design-patterns/builder/assets/: builder_diagram.puml
design-patterns/builder/src/product_builder/: CMakeLists.txt  Director.cpp
design-patterns/chain-of-responsibility/: chain-of-responsibility.md
design-patterns/composite/: composite.md
design-patterns/composite/assets/: composite_type_safety_diagram.puml
design-patterns/composite/src/: main.cpp
design-patterns/decorator/src/: CMakeLists.txt  main.cpp
design-patterns/decorator/src/dynamic_decorator/: CMakeLists.txt
design-patterns/decorator/src/static_decorator/: CMakeLists.txt  Decorator1.ipp  Decorator2.h
design-patterns/facade/: facade.md
design-patterns/facade/assets/: facade_diagram.puml
design-patterns/facade/src/: CMakeLists.txt
design-patterns/factory-method/src/product_factory_method/: ConcreteCreatorB.cpp  ConcreteProductA.cpp  ICreator.h
design-patterns/flyweight/src/: main.cpp
design-patterns/iterator/: iterator.md
design-patterns/memento/: memento.md
design-patterns/prototype/: prototype.md
design-patterns/prototype/src/: CMakeLists.txt
design-patterns/prototype/src/prototype/: ConcretePrototype2.h
design-patterns/singleton/src/: CMakeLists.txt
design-patterns/singleton/src/singleton/: CMakeLists.txt
design-patterns/strategy/src/: CMakeLists.txt  main.cpp
design-patterns/strategy/src/dynamic_base/: CMakeLists.txt  Context.h
design-patterns/strategy/src/dynamic_function/: Context.h
design-patterns/strategy/src/static_template/: CMakeLists.txt  Context.h
designPatterns/Adapter/src/: CMakeLists.txt
designPatterns/Adapter/src/classAdapter/: CMakeLists.txt  ClassAdapter.cpp  ClassAdapter.h
designPatterns/Adapter/src/common/: Adaptee.cpp  Adaptee.h  CMakeLists.txt
designPatterns/Adapter/src/objectAdapter/: CMakeLists.txt  ObjectAdapter.cpp  ObjectAdapter.h
designPatterns/Bridge/src/: CMakeLists.txt  main.cpp
designPatterns/Bridge/src/fullBridge/: CMakeLists.txt  ConcreteImplementor.cpp  ConcreteImplementor.h  RefinedAbstraction.h
designPatterns/Bridge/src/pimplIdiom/: CMakeLists.txt  PimplIdiomExample.h
designPatterns/Builder/src/: CMakeLists.txt  main.cpp
designPatterns/Builder/src/product/: CMakeLists.txt  ConcreteProductBuilder.cpp  ConcreteProductBuilder.h  Director.cpp  Director.h  IProductBuilder.h  Product.cpp  Product.h
designPatterns/Builder/src/productBuilder/: CMakeLists.txt  ConcreteProductBuilder.cpp  ConcreteProductBuilder.h  Director.h  IProductBuilder.h  Product.cpp  Product.h
designPatterns/Decorator/src/: CMakeLists.txt
designPatterns/Decorator/src/dynamicDecorator/: CMakeLists.txt  ConcreteComponent.cpp  ConcreteDecorator1.cpp  ConcreteDecorator1.h  ConcreteDecorator2.cpp  ConcreteDecorator2.h  Decorator.cpp  IComponent.h
designPatterns/Decorator/src/staticDecorator/: CMakeLists.txt  Component.cpp  Component.h  Decorator1.h  ValidComponent.h
designPatterns/Facade/src/: CMakeLists.txt  main.cpp
designPatterns/Facade/src/facade/: CMakeLists.txt  Facade.cpp  SubsystemA.h  SubsystemB.cpp
designPatterns/FactoryMethod/src/: CMakeLists.txt  main.cpp
designPatterns/FactoryMethod/src/productFactoryMethod/: CMakeLists.txt  ConcreteCreator.cpp  ConcreteCreator.h  ConcreteCreatorA.cpp  ConcreteProduct.cpp  (+6 more)
designPatterns/Flyweight/src/: CMakeLists.txt
designPatterns/Prototype/src/: CMakeLists.txt  main.cpp
designPatterns/Singleton/src/: CMakeLists.txt  main.cpp
designPatterns/Strategy/src/: CMakeLists.txt  main.cpp
design_patterns/: CMakeLists.txt  Design_Patterns.md  design_patterns.md
design_patterns/Builder/: Builder.md
design_patterns/Decorator/: Decorator.md
design_patterns/Mediator/: Mediator.md
design_patterns/State/: State.md
design_patterns/Strategy/: Strategy.md
design_patterns/Template_Method/: Template_Method.md
design_patterns/abstract_factory/src/: CMakeLists.txt  main.cpp
design_patterns/adapter/: adapter.md
design_patterns/adapter/assets/: adapter_class_diagram.puml  adapter_object_diagram.puml
design_patterns/adapter/src/: CMakeLists.txt  main.cpp
design_patterns/bridge/src/: CMakeLists.txt  main.cpp
design_patterns/builder/src/: CMakeLists.txt  main.cpp
design_patterns/command/: command.md
design_patterns/composite/assets/: composite_uniformity_diagram.puml
design_patterns/composite/src/: CMakeLists.txt  main.cpp
design_patterns/decorator/: decorator.md
design_patterns/decorator/src/: CMakeLists.txt  main.cpp
design_patterns/facade/src/: CMakeLists.txt  main.cpp
design_patterns/factory_method/: factory_method.md
design_patterns/factory_method/src/: CMakeLists.txt  main.cpp
design_patterns/flyweight/: flyweight.md
design_patterns/flyweight/assets/: flyweight_diagram.puml
design_patterns/flyweight/src/: CMakeLists.txt  main.cpp
design_patterns/prototype/src/: CMakeLists.txt  main.cpp
design_patterns/singleton/: singleton.md
design_patterns/singleton/src/: CMakeLists.txt  main.cpp
design_patterns/state/: state.md
design_patterns/strategy/: strategy.md
design_patterns/strategy/src/: CMakeLists.txt  main.cpp
design_patterns/template_method/: template_method.md
design_patterns/visitor/: visitor.md
src/strategy/: CMakeLists.txt  main.cpp
src/strategy/dynamicBase/: DynamicStrategyBase.h
src/strategy/dynamicFunction/: CMakeLists.txt
(+271 files in other folders)
