add_subdirectory(abstract-factory)
add_subdirectory(adapter)
add_subdirectory(bridge)
add_subdirectory(builder)
add_subdirectory(composite)
add_subdirectory(decorator)
add_subdirectory(facade)
add_subdirectory(factory-method)
add_subdirectory(flyweight)
add_subdirectory(prototype)
add_subdirectory(singleton)
add_subdirectory(strategy)
