add_subdirectory(abstract_factory)
add_subdirectory(adapter)
add_subdirectory(bridge)
add_subdirectory(builder)
add_subdirectory(composite)
add_subdirectory(decorator)
add_subdirectory(facade)
add_subdirectory(factory_method)
add_subdirectory(flyweight)
add_subdirectory(prototype)
add_subdirectory(singleton)
add_subdirectory(strategy)
